--- a/templates/base.html
+++ b/templates/base.html
@@ -3,13 +3,15 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta author="Quoc-Kiet Lai, Nathan Story" />
+
     <link
       rel="stylesheet"
       type="text/css"
       href="{{ url_for('static',filename='styles/styles.css') }}"
     />
 
-    <title>{% title block %} {% endblock %}</title>
+    <title>{% block title %}{% endblock %}</title>
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -22,7 +24,7 @@
       also make it so that it has hover and animations
     -->
 
-    <div id="main">{% content block %} {% endblock %}</div>
+    <div id="main">{% block content %} {% endblock %}</div>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2"
