Some empty streamlines

--- a/templates/content/gpa.html
+++ b/templates/content/gpa.html
@@ -1,2 +1,2 @@
-{% extends "base.html" %} {% block title %}Gpa - Winston{% endblock %} {% block
-content %} {% endblock %}
+{% extends "base.html" %} {% block title %}Gpa{% endblock %} {% block content %}
+{% endblock %}
