--- a/templates/base.html
+++ b/templates/base.html
@@ -11,7 +11,7 @@
       href="{{ url_for('static',filename='styles/styles.css') }}"
     />
 
-    <title>{% block title %}{% endblock %}</title>
+    <title>{% block title %}{% endblock %} - Winston</title>
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css"
       rel="stylesheet"
