--- a/templates/main/home.html
+++ b/templates/main/home.html
@@ -1,1 +1,1 @@
-{% extends "base.html" %} {% block title %}Home - Winston{% endblock %}
+{% extends "base.html" %} {% block title %}Home{% endblock %}
